syntax = "proto3";

package score_server;

// 指定 目录
option go_package= "github.com/gin-gonic/examples/protobuf/score_server";

import "google/protobuf/any.proto";

// 基本的积分消息
message base_score_info_t{
  int32       win_count = 1;                  // 玩家胜局局数
  int32       lose_count = 2;                 // 玩家负局局数
  int32       exception_count = 3;            // 玩家异常局局数
  int32       kill_count = 4;                 // 总人头数
  int32       death_count = 5;                // 总死亡数
  int32       assist_count = 6;               // 总总助攻数
  int64       rating = 7;                     // 评价积分
  repeated int32 assist_player_id = 8;         // 助攻玩家id列表
  google.protobuf.Any details = 9;

}
// protoc -I=score_server --go_out=pb  --go_opt=paths=source_relative score_info.proto

message RtaRequest {
  string request_id = 1; //本次请求的唯一标识 id。
  string channel = 2; //渠道标识
  int64 request_time = 3; //发起调用时的 unix 时间戳，毫秒。快手侧会与服务器当前时间进行比对，两者差值不能大于 10 分钟
  string sign = 4; //验签值，sign = md5(request_id + request_time + 授权码)，三个字段直接拼接，中间没有"+"号
  Device device = 5; //设备信息
  message Device {
    string imei = 1; //imei 原值
    string imeiMd5 = 2; //imeiMd5 = toLowerCase(md5(imei 原值))
    string oaid = 3; //oaid 原值
    string oaidMd5 = 4; //oaidMd5 = toLowerCase(md5(oaid 原值))
    string idfa = 5; //idfa 原值
    string idfaMd5 = 6; //idfaMd5 = toLowerCase(md5(idfa 原值))
  }
  repeated string promotion_type = 6; //该设备需要问询的推广类型，如快手拉新、快手极速版拉活。具体值在线下约定快手内部文档请勿外传
}

message RtaResponse {
  int32 status_code = 1; // 服务状态码，正常:0，异常:非 0
  repeated PromotionResult promotion_result = 2;
  message PromotionResult {
    string promotion_type = 1; //对应 RtaRequest.promotion_type
    bool accept = 2; //true:选择该流量，可以参与竞价
  }
}

// 通知读者的消息
message NoticeReaderRequest{
  string msg = 1;
  oneof notice_way{
    string email = 2;
    string phone = 3;
  }
}
